--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">CPS731LAB05SEC01AlisonDer</string>
     <string name="title_item_detail">Item Detail</string>
+    <string name="titleSplash">Welcome to my Cafe!</string>
 </resources>
